[gd_scene load_steps=28 format=2]

[ext_resource path="res://Battlescenes/Pictures/bat1.png" type="Texture" id=1]
[ext_resource path="res://Battlescenes/Pictures/batlescene.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Battlescenes/Script/battle_scene_forest-big_bug.gd" type="Script" id=6]
[ext_resource path="res://Battlescenes/tres/big_bug.tres" type="Resource" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Battlescenes/sounds/battlescene_music.wav" type="AudioStream" id=10]
[ext_resource path="res://Music and Sounds/Hurt.wav" type="AudioStream" id=11]
[ext_resource path="res://Music and Sounds/EnemyDie.wav" type="AudioStream" id=12]
[ext_resource path="res://Music and Sounds/Hit.wav" type="AudioStream" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.141176, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.00392157, 0.00392157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=9]
size = 7
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=11]
size = 7
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_container/bat:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_container:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "enemy_damage"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_container/bat:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "health_hide"
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6, -6 ), Vector2( 5, -6 ), Vector2( -6, 8 ), Vector2( 9, 5 ), Vector2( 0, 0 ) ]
}

[node name="battle_scene" type="Control"]
script = ExtResource( 6 )
enemy = ExtResource( 7 )

[node name="arena" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="enemy_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 132.0
margin_top = 38.0
margin_right = 192.0
margin_bottom = 93.0

[node name="ProgressBar" type="ProgressBar" parent="enemy_container"]
margin_right = 64.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="enemy_container/ProgressBar"]
margin_right = 71.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "     25/50"
valign = 1

[node name="bat" type="TextureRect" parent="enemy_container"]
margin_top = 20.0
margin_right = 64.0
margin_bottom = 84.0
texture = ExtResource( 1 )

[node name="player_panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 156.0
margin_right = 319.0
margin_bottom = 179.0
custom_styles/panel = SubResource( 4 )

[node name="player_data" type="HBoxContainer" parent="player_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Stats" parent="player_panel" instance=ExtResource( 8 )]

[node name="HeartUI" parent="player_panel" instance=ExtResource( 4 )]
margin_left = 216.0
margin_top = 6.0
margin_right = 297.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Label" type="Label" parent="player_panel"]
margin_left = 95.0
margin_top = 4.0
margin_right = 141.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "player"
align = 1

[node name="action_panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1.0
margin_top = 104.0
margin_right = 320.0
margin_bottom = 151.0
custom_styles/panel = SubResource( 4 )

[node name="actions" type="HBoxContainer" parent="action_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = -21.0
custom_constants/separation = 5
alignment = 1

[node name="list" type="Button" parent="action_panel/actions"]
margin_right = 67.0
margin_bottom = 11.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "List"

[node name="data_type" type="Button" parent="action_panel/actions"]
margin_left = 72.0
margin_right = 140.0
margin_bottom = 11.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "data type"

[node name="OOP" type="Button" parent="action_panel/actions"]
margin_left = 145.0
margin_right = 213.0
margin_bottom = 11.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "oop"

[node name="Classes" type="Button" parent="action_panel/actions"]
margin_left = 218.0
margin_right = 286.0
margin_bottom = 11.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "classes"

[node name="Question" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1.0
margin_right = 320.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 4 )

[node name="text" type="Label" parent="Question"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "Which  magic is used to organize data runes, without concerning 
the maximum space?"
align = 1
valign = 1

[node name="textbox" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 12.0
margin_top = 4.0
margin_right = 307.0
margin_bottom = 41.0
custom_styles/panel = SubResource( 10 )

[node name="Label" type="Label" parent="textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 11 )
text = "A BAT appears!"

[node name="ticker" type="Label" parent="textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -15.0
margin_right = -3.0
margin_bottom = -1.0
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/enemy_damage = SubResource( 13 )
anims/health_hide = SubResource( 15 )
anims/shake = SubResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
current = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="enemy_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[connection signal="pressed" from="action_panel/actions/list" to="." method="_on_list_pressed"]
[connection signal="pressed" from="action_panel/actions/data_type" to="." method="_on_data_type_pressed"]
[connection signal="pressed" from="action_panel/actions/OOP" to="." method="_on_OOP_pressed"]
[connection signal="pressed" from="action_panel/actions/Classes" to="." method="_on_Classes_pressed"]

[editable path="player_panel/Stats"]
